--- a/src/app/ui/books/authors/authors.component.html
+++ b/src/app/ui/books/authors/authors.component.html
@@ -1,39 +1,66 @@
-<div class="addBookRoot">
-  <div class="addBookForm">
-    <form #formAddBook="ngForm" #formElement="ngForm" (ngSubmit)="submitFormCreateBoot(formAddBook)">
+
+<div class="authors">
+  <div class="container mt-auto mb-auto">
+    <form (ngSubmit)="submitForm(formElement)" #formElement="ngForm" >
       <div class="form-floating">
         <input
           type="text"
           class="form-control"
-          [ngClass]="{'is-invalid': bookTitle.invalid && bookTitle.touched,'is-valid': !bookTitle.invalid  && bookTitle.touched}"
-          ngModel name="bookTitle"
+          [ngClass]="{'is-invalid': firstname.invalid && firstname.touched,'is-valid': !firstname.invalid  && firstname.touched}"
+          ngModel name="firstname"
           required
-          #bookTitle="ngModel"
-          id="bookTitle"
-          placeholder="Название книги">
-        <label for="bookTitle">Название книги</label>
+          pattern="[a-zA-Zа-яА-Я]*"
+          #firstname = "ngModel"
+          id="firstname"
+          placeholder="Имя">
+        <label for="firstname">Имя</label>
       </div>
-
-      <div  id="datalist" [ngClass]="{'active':isClick}">
-        <input [(ngModel)]="inputText"
-               name="authors"
-               #authors="ngModel"
-               id="datalist-input"
-               type="text"
-               required
-               (click)="inputClickEvent($event)"
-               class="form-control"
-               [ngClass]="{'is-invalid': authors.invalid && authors.touched,'is-valid': !authors.invalid  && authors.touched}"
-               (input)="inputTextModel(authors);"
-               placeholder="Выберите автора">
-        <ul id="datalist-ul">
-          <div *ngFor="let item of filterObj">
-            <li (click)="testObj(item.text);" id="{{item.value}}">{{item.text}}</li>
-          </div>
-        </ul>
+      <div class="form-group form-floating">
+        <input
+          class="form-control"
+          [ngClass]="{'is-invalid': lastname.invalid && lastname.touched,'is-valid': !lastname.invalid && lastname.touched}"
+          ngModel
+          name="lastname"
+          required
+          pattern="[a-zA-Zа-яА-Я]*"
+          #lastname = "ngModel"
+          id="lastname"
+          placeholder="Фамилия">
+        <label for="lastname">Фамилия</label>
       </div>
-      <button  class="btn btn-primary" type="submit">Добавить книгу</button>
+      <div class="form-group form-floating">
+        <input
+          class="form-control"
+          [ngClass]="{'is-invalid': patronymic.invalid && patronymic.touched,'is-valid': !patronymic.invalid && patronymic.touched}"
+          ngModel name="patronymic"
+          required
+          pattern="[a-zA-Zа-яА-Я]*"
+          #patronymic = "ngModel"
+          id="patronymic"
+          placeholder="Отчество">
+        <label for="patronymic">Отчество</label>
+      </div>    <div class="form-group form-floating">
+        <input
+          class="form-control"
+          [ngClass]="{'is-invalid': dateOfBirth.invalid && dateOfBirth.touched,'is-valid': !dateOfBirth.invalid && dateOfBirth.touched}"
+          ngModel name="dateOfBirth"
+          required
+          type="date"
+          #dateOfBirth = "ngModel"
+          id="dateOfBirth"
+          placeholder="Дата рождения">
+        <label for="dateOfBirth">Дата рождения</label>
+      </div>
+      <div class=" d-grid gap-2 col-4 mx-auto mb-5 p-1">
+        <button
+          class="btn btn-success mt-5"
+          type="submit"
+          [disabled]="!formElement.valid"
+        >Добавить автора</button>
+      </div>
     </form>
+    <div class="flexContainerCenter" style=" margin-top: 20pt">
+      <p style="white-space: pre-wrap; text-align: center; font-size: large">{{response}}
+    </div>
   </div>
-
 </div>
