--- a/src/app/ui/books/genre/genre-list/genre-list.component.html
+++ b/src/app/ui/books/genre/genre-list/genre-list.component.html
@@ -68,6 +68,15 @@
             <li>Жанр может содержать одно или два слова</li>
             <li>Не допустим ввод цифр и спецсимволов</li>
             <li>Допустим один пробел между словами</li>
+            <div class="alert alert-success"> Разрешено
+              <li> Военный роман </li>
+              <li> Приключения </li>
+            </div>
+            <div class="alert alert-danger"> Запрещено
+              <li> R0man </li>
+              <li> При-клю-чения </li>
+              <li> 111100101 </li>
+            </div>
           </div>
         </div>
         <div class="modal-footer">
