--- a/src/app/ui/books/translation/translation.component.html
+++ b/src/app/ui/books/translation/translation.component.html
@@ -74,20 +74,16 @@
           </div>
           <div class="modal-body">
             <div class="alert alert-warning">
-              <li>Возрастное ограничение может содержать только цифры</li>
-              <li>Если возрастное ограничение имеет диапазон чисел, допустим между цифрами дефис и каждое число из диапазона должно содержать не более двух цифр</li>
-              <li>Если число не имеет диапазона должен быть знак "+" после числа</li>
+              <li>Автор перевода должен содержать имя, фамилию и возможно отчество </li>
+
               <div class="alert alert-success"> Разрешено
-                <li> 16+ </li>
-                <li> 0-3 </li>
-                <li> 16-18 </li>
+                <li> Иванов Иван </li>
+                <li> Петров Петр Петрович </li>
               </div>
               <div class="alert alert-danger"> Запрещено
-                <li> 12 </li>
-                <li> Десять </li>
-                <li> 16 18 </li>
-                <li> -9 </li>
-                <li> 100-150 </li>
+                <li> Иван </li>
+                <li> I@an </li>
+                <li> Petrov Petr Petr Petrov </li>
               </div>
             </div>
           </div>
