--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>doc1</title>
 </head>
-<body>
-<div class="container">
+<body >
+<div >
+
+
+<div class="container" style="background: #F8F9FA;">
 <app-top-menu></app-top-menu>
 <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
+</div>
 </body>
+
 </html>
 
 
