--- a/src/app/ui/books/authors/authors.component.css
+++ b/src/app/ui/books/authors/authors.component.css
@@ -1,69 +1,28 @@
-.addBookRoot {
+
+.authors {
+  padding-top: 20pt;
+  flex-direction: column;
+  display: flex;
+  min-width: 30%;
   background-color: #F8F9FA;
 }
 
-.addBookForm {
-  width: 50%;
-  padding-top: 20pt;
+.form-floating {
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 20pt;
+  margin-top: 10pt;
+  min-width: 150pt;
+  max-width: 33%;
+}
+
+.form-input {
+  margin-top: 5pt;
+  margin-bottom: 5pt;
+}
+
+input.ng-invalid.ng-touched {
+  border: 1pt solid red;
 }
 
 
-#datalist {
-  margin: auto;
-  position: relative;
-  width: 100%;
-  color: #000;
-}
 
-#datalist.active #datalist-ul {
-  display: block;
-}
-
-#datalist-input {
-  padding-left: 1em;
-  width: 100%;
-  height: 54px;
-  border-radius: 5px;
-  box-sizing: border-box;
-  box-shadow: none;
-  border: 1px solid #ccc;
-  outline: 0;
-}
-
-#datalist-input:focus {
-  border: 1px solid #AA0000;
-  outline: 0;
-}
-
-#datalist-ul {
-  display: none;
-  position: absolute;
-  margin: 5px 0 0 0;
-  padding: 0;
-  width: 100%;
-  max-height: 200px;
-  top: 100%;
-  left: 0;
-  list-style: none;
-  border-radius: 2px;
-  background: #fff;
-  overflow: hidden;
-  overflow-y: auto;
-  z-index: 100;
-}
-
-#datalist-ul li {
-  display: block;
-  text-align: left;
-  padding: 0.8em 1em 0.8em 1em;
-  cursor: pointer;
-  opacity: 0.7;
-}
-
-#datalist-ul li:hover {
-  background: rgba(108, 117, 125, 0.1);
-  opacity: 1;
-}
