--- a/src/app/ui/menu/top-menu/top-menu.component.html
+++ b/src/app/ui/menu/top-menu/top-menu.component.html
@@ -26,7 +26,8 @@
         <li *ngIf="!getLoggedInStatus()" class="nav-item">
           <a  routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/promo_code">Промокод</a>
         </li>
-        <li *ngIf="token.getRole()+''==userService.getRoleWorker()||token.getRole()+''== userService.getRoleAdmin()"  class="nav-item dropdown">
+<!--        <li *ngIf="token.getRole()+''==userService.getRoleWorker()||token.getRole()+''== userService.getRoleAdmin()"  class="nav-item dropdown">-->
+        <li   class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Меню работника
           </a>
